--- a/projects/ngx/lowcode/wpx-template/wpx-template.component.html
+++ b/projects/ngx/lowcode/wpx-template/wpx-template.component.html
@@ -1,5 +1,5 @@
 <ng-container [ngSwitch]="router">
   <ng-container *ngSwitchCase="'table'">
-    <wpx-template-table [fields]="fields"></wpx-template-table>
+    <wpx-template-table [fields]="fields" [lists]="lists!"></wpx-template-table>
   </ng-container>
 </ng-container>
