--- a/projects/ngx/lowcode/wpx-template/wpx-template-table/wpx-template-table.component.scss
+++ b/projects/ngx/lowcode/wpx-template/wpx-template-table/wpx-template-table.component.scss
@@ -1,10 +1,4 @@
-.resize-trigger {
-  width: 1px;
-  height: 30px;
-  margin-top: 12px;
-  background: #e8e8e8;
-}
-.nz-resizable-preview {
-  border-width: 0;
-  border-right-width: 1px;
+.search {
+  width: 90%;
+  padding-top: 1em;
 }
